overlays/uksouth-perf/olympus/locust/patches/api-v1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  labels:
    app: locust
  name: locust
  namespace: default
spec:
  rules:
    - host: locustv1.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-controller-v1
                port:
                  number: 8089
  tls:
    - hosts:
        - locustv1.${cluster_name}.${cluster_location}.bink.sh
